<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourguide.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/introStart"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/food"
            android:background="@color/category_food"
            android:text="@string/category_food"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/interestPlace"
            android:background="@color/category_interestPlace"
            android:text="@string/category_interestPlace"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/park"
            android:background="@color/category_park"
            android:text="@string/category_park"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/religion"
            android:background="@color/category_religion"
            android:text="@string/category_religion"
            style="@style/CategoryStyle"/>

    </LinearLayout>

</ScrollView>
